<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="realmdemo.perkins.com.realmdemo.Main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal|center_vertical"
        android:textSize="18pt"
        android:text="@string/header" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/prompt"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioORM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbSugar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/sugarApp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbOrm"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/realm"/>

        </RadioGroup>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/testPrompt"
        android:layout_marginTop="5dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioTestType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <RadioButton
                android:id="@+id/rbTimed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/timedTest"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbFixed"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/fixedTest"/>

        </RadioGroup>

    </LinearLayout>

    <TextView
        android:id="@+id/promptTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/timedprompt"/>

    <EditText
        android:id="@+id/etQuantifier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text="0"
        />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/startTest" />
</LinearLayout>
